[package]
name = "gamma-ctl"
authors = ["Extamov"]
description = "A CLI software that allows changing monitor gamma settings"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
strip = true
codegen-units = 1

[dependencies]
itertools = "0.14.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Graphics_Gdi", "Win32_UI_ColorSystem"] }